--- a/app/src/main/res/layout-land-v17/activity_main.xml
+++ b/app/src/main/res/layout-land-v17/activity_main.xml
@@ -17,16 +17,6 @@
         android:textAlignment="center"
         android:layout_centerHorizontal="true" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/barcode_value"
-        android:layout_below="@+id/status_message"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="110dp"
-        android:layout_alignEnd="@+id/status_message" />
-
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -52,7 +42,7 @@
         android:text="@string/use_flash"
         android:id="@+id/use_flash"
         android:layout_alignTop="@+id/auto_focus"
-        android:layout_alignEnd="@+id/barcode_value"
+
         android:checked="false"
         android:visibility="invisible"/>
     <Button
@@ -69,6 +59,13 @@
         android:layout_above="@+id/read_barcode"
         android:layout_alignStart="@+id/status_message"
         android:text="clear" />
+
+    <ListView
+        android:id="@+id/list_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:layout_centerInParent="true" />
     <Button
         android:id="@+id/firebase"
         android:layout_width="wrap_content"
