--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -17,18 +17,6 @@
         android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/barcode_value"
-        android:layout_below="@+id/status_message"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="110dp"
-        android:layout_alignRight="@+id/status_message"
-        android:layout_alignEnd="@+id/status_message" />
-
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -71,6 +59,12 @@
         android:layout_above="@+id/read_barcode"
         android:layout_alignStart="@+id/status_message"
         android:text="clear" />
+
+    <ListView
+        android:id="@+id/list_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true" />
     <Button
         android:id="@+id/firebase"
         android:layout_width="wrap_content"
