--- a/app/src/main/res/layout-v17/activity_main.xml
+++ b/app/src/main/res/layout-v17/activity_main.xml
@@ -17,15 +17,7 @@
         android:textAlignment="center"
         android:layout_centerHorizontal="true" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/barcode_value"
-        android:layout_below="@+id/status_message"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="110dp"
-        android:layout_alignEnd="@+id/status_message" />
+
 
     <Button
         android:id="@+id/read_barcode"
@@ -49,14 +41,15 @@
         android:visibility="invisible"/>
 
     <Switch
+        android:id="@+id/use_flash"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/use_flash"
-        android:id="@+id/use_flash"
+        android:layout_alignParentEnd="true"
         android:layout_alignTop="@+id/auto_focus"
-        android:layout_alignEnd="@+id/barcode_value"
+        android:layout_marginEnd="25dp"
         android:checked="false"
-        android:visibility="visible"/>
+        android:text="@string/use_flash"
+        android:visibility="visible" />
     <Button
         android:id="@+id/readbarcodexz"
         android:layout_width="wrap_content"
@@ -72,6 +65,12 @@
         android:layout_above="@+id/read_barcode"
         android:layout_alignStart="@+id/status_message"
         android:text="clear" />
+
+    <ListView
+        android:id="@+id/list_view"
+        android:layout_width="match_parent"
+        android:layout_height="316dp"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:id="@+id/firebase"
