--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,17 +17,7 @@
         android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/barcode_value"
-        android:layout_below="@+id/status_message"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="110dp"
-        android:layout_alignRight="@+id/status_message"
-        android:layout_alignEnd="@+id/status_message" />
+
 
     <Button
         android:layout_width="wrap_content"
@@ -42,7 +32,6 @@
         android:layout_height="wrap_content"
         android:text="@string/auto_focus"
         android:id="@+id/auto_focus"
-        android:layout_below="@+id/barcode_value"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="66dp"
@@ -75,12 +64,6 @@
         android:layout_alignStart="@+id/status_message"
         android:text="clear" />
 
-    <ListView
-        android:id="@+id/list_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/barcode_value"
-        android:layout_centerHorizontal="true" />
     <Button
         android:id="@+id/firebase"
         android:layout_width="wrap_content"
@@ -89,5 +72,12 @@
         android:layout_alignTop="@+id/read_barcode"
         android:layout_marginStart="23dp"
         android:text="Firebase" />
+
+    <ListView
+        android:id="@+id/list_view"
+        android:layout_width="match_parent"
+        android:layout_height="386dp"
+        android:layout_alignTop="@+id/status_message"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
