--- a/app/src/main/res/layout-land-v17/activity_main.xml
+++ b/app/src/main/res/layout-land-v17/activity_main.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.google.android.gms.samples.vision.barcodereader.MainActivity">
+
 
     <TextView
         android:layout_width="match_parent"
@@ -18,12 +22,13 @@
         android:layout_centerHorizontal="true" />
 
     <Button
+        android:id="@+id/read_barcode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="google vision"
-        android:id="@+id/read_barcode"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/list_view"
+        android:layout_marginEnd="121dp"
+        android:text="SCAN" />
 
     <Switch
         android:layout_width="wrap_content"
@@ -45,34 +50,30 @@
 
         android:checked="false"
         android:visibility="invisible"/>
-    <Button
-        android:id="@+id/readbarcodexz"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/read_barcode"
-        android:layout_centerHorizontal="true"
-        android:text="XZing" />
+
     <Button
         android:id="@+id/clear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/read_barcode"
-        android:layout_alignStart="@+id/status_message"
+        android:layout_alignTop="@+id/read_barcode"
+        android:layout_toEndOf="@+id/use_flash"
         android:text="clear" />
 
     <ListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="232dp"
 
-        android:layout_centerInParent="true" />
+        android:layout_alignTop="@+id/status_message"
+        android:layout_centerHorizontal="true" />
+
     <Button
-        android:id="@+id/firebase"
+        android:id="@+id/send"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignTop="@+id/read_barcode"
-        android:layout_marginStart="23dp"
-        android:text="Firebase" />
+        android:layout_marginStart="226dp"
+        android:text="send" />
 
 </RelativeLayout>
