--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -34,7 +37,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="77dp"
-        android:checked="false" />
+        android:checked="false"
+        android:visibility="gone"/>
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -42,16 +46,9 @@
         android:text="@string/use_flash"
         android:id="@+id/use_flash"
         android:layout_alignTop="@+id/auto_focus"
-        android:layout_alignRight="@+id/barcode_value"
-        android:layout_alignEnd="@+id/barcode_value"
-        android:checked="false" />
-    <Button
-        android:id="@+id/readbarcodexz"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/read_barcode"
-        android:layout_centerHorizontal="true"
-        android:text="XZing" />
+        android:checked="false"
+        android:visibility="gone"/>
+
     <Button
         android:id="@+id/clear"
         android:layout_width="wrap_content"
@@ -66,12 +63,11 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true" />
     <Button
-        android:id="@+id/firebase"
+        android:id="@+id/send"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignTop="@+id/read_barcode"
-        android:layout_marginStart="23dp"
-        android:text="Firebase" />
-
+        android:layout_marginStart="137dp"
+        android:text="send" />
 </RelativeLayout>
