--- a/app/src/main/res/layout-v17/activity_main.xml
+++ b/app/src/main/res/layout-v17/activity_main.xml
@@ -5,14 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.google.android.gms.samples.vision.barcodereader.MainActivity">
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/my_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:elevation="4dp"
-        android:background="#ccc"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+
 
     <TextView
         android:layout_width="match_parent"
@@ -25,16 +18,14 @@
         android:layout_centerHorizontal="true" />
 
 
-
     <Button
         android:id="@+id/read_barcode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="13dp"
-        android:layout_marginEnd="60dp"
-        android:text="google Vision" />
+        android:layout_below="@+id/list_view"
+        android:layout_marginEnd="39dp"
+        android:text="Scan" />
 
     <Switch
         android:layout_width="wrap_content"
@@ -56,36 +47,30 @@
         android:layout_marginEnd="25dp"
         android:checked="false"
         android:text="@string/use_flash"
-        android:visibility="visible" />
-    <Button
-        android:id="@+id/readbarcodexz"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/read_barcode"
-        android:layout_centerHorizontal="true"
-        android:text="XZing" />
+        android:visibility="gone" />
 
     <Button
         android:id="@+id/clear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/read_barcode"
-        android:layout_alignStart="@+id/status_message"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/read_barcode"
+        android:layout_marginStart="32dp"
         android:text="clear" />
 
     <ListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
-        android:layout_height="316dp"
+        android:layout_height="452dp"
         android:layout_centerHorizontal="true" />
 
     <Button
-        android:id="@+id/firebase"
+        android:id="@+id/send"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignTop="@+id/read_barcode"
-        android:layout_marginStart="23dp"
-        android:text="Firebase" />
+        android:layout_marginStart="137dp"
+        android:text="send" />
 
 </RelativeLayout>
