--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -18,14 +21,15 @@
         android:layout_centerHorizontal="true" />
 
 
-
     <Button
+        android:id="@+id/read_barcode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Vision google"
-        android:id="@+id/read_barcode"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="32dp"
+        android:layout_marginEnd="42dp"
+        android:text="Scan" />
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -50,34 +54,27 @@
         android:visibility="gone"/>
 
     <Button
-        android:id="@+id/readbarcodexz"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/read_barcode"
-        android:layout_centerHorizontal="true"
-        android:text="XZing" />
-    <Button
         android:id="@+id/clear"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/read_barcode"
-        android:layout_alignStart="@+id/status_message"
-        android:text="clear" />
-
-    <Button
-        android:id="@+id/firebase"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignTop="@+id/read_barcode"
-        android:layout_marginStart="23dp"
-        android:text="Firebase" />
+        android:layout_marginStart="42dp"
+        android:text="clear" />
 
     <ListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
-        android:layout_height="386dp"
+        android:layout_height="408dp"
         android:layout_alignTop="@+id/status_message"
         android:layout_centerHorizontal="true" />
+    <Button
+        android:id="@+id/send"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/read_barcode"
+        android:layout_marginStart="137dp"
+        android:text="send" />
 
 </RelativeLayout>
