--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/setting_button"
-        android:icon="@android:drawable/ic_menu_preferences"
+        android:icon="@drawable/setting"
         android:title="settings"
         app:showAsAction="ifRoom"/>
 
