--- a/app/src/main/res/layout-land-v17/activity_main.xml
+++ b/app/src/main/res/layout-land-v17/activity_main.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="com.google.android.gms.samples.vision.barcodereader.MainActivity">
 
 
@@ -19,61 +16,91 @@
         android:id="@+id/status_message"
         android:layout_alignParentEnd="true"
         android:textAlignment="center"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:visibility="gone"/>
 
-    <Button
-        android:id="@+id/read_barcode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/list_view"
-        android:layout_marginEnd="121dp"
-        android:text="SCAN" />
+
+
 
     <Switch
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/auto_focus"
         android:id="@+id/auto_focus"
-        android:layout_above="@+id/read_barcode"
+
         android:layout_alignParentStart="true"
         android:layout_marginBottom="77dp"
         android:checked="false"
-        android:visibility="invisible"/>
+        android:visibility="gone"/>
 
     <Switch
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/use_flash"
         android:id="@+id/use_flash"
-        android:layout_alignTop="@+id/auto_focus"
-
-        android:checked="false"
-        android:visibility="invisible"/>
-
-    <Button
-        android:id="@+id/clear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/read_barcode"
-        android:layout_toEndOf="@+id/use_flash"
-        android:text="clear" />
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/auto_focus"
+        android:layout_marginEnd="25dp"
+        android:checked="false"
+        android:text="@string/use_flash"
+        android:visibility="gone" />
+
 
     <ListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
-        android:layout_height="232dp"
-
-        android:layout_alignTop="@+id/status_message"
-        android:layout_centerHorizontal="true" />
-
-    <Button
-        android:id="@+id/send"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/read_barcode"
-        android:layout_marginStart="226dp"
-        android:text="send" />
+        android:layout_weight="1"
+        android:layout_alignParentTop="true" />
 
-</RelativeLayout>
+    <LinearLayout
+        android:id="@+id/linearLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal"
+
+        android:weightSum="3"
+        android:layout_margin="6dp">
+
+        <Button
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:id="@+id/clear"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_margin="3dp"
+            android:layout_marginTop="0dp"
+            android:text="clear"
+            android:background="#fff"/>
+
+        <Button
+            android:layout_margin="3dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:layout_weight="1"
+            android:id="@+id/send"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="#fff"
+            android:layout_marginTop="0dp"
+
+
+            android:text="send" />
+
+        <Button
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:id="@+id/read_barcode"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="Scan"
+            android:layout_margin="3dp"
+            android:background="#fff"
+            android:layout_marginTop="0dp"/>
+    </LinearLayout>
+</LinearLayout>
