--- a/app/src/main/res/layout/activity_live_preview.xml
+++ b/app/src/main/res/layout/activity_live_preview.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000"
+    android:background="#fff"
     android:keepScreenOn="true">
 
     <com.google.android.gms.samples.vision.barcodereader.Firebase.CameraSourcePreview
@@ -36,18 +36,31 @@
     <FrameLayout
         android:id="@+id/control"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="48dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_toEndOf="@id/firePreview"
         android:background="#000"
-        android:visibility="invisible">
-
+        android:layout_margin="0dp"
+        android:padding="0dp"
+        android:visibility="visible"
+        >
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="0dp"
+        android:padding="0dp"
+        android:background="#fff"
+        android:text="Done"
+        android:id="@+id/done"
+        android:textColor="#000"/>
         <Spinner
             android:id="@+id/spinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center" />
+            android:layout_gravity="center"
+            android:visibility="gone"
+            />
 
         <ToggleButton
             android:id="@+id/facingswitch"
@@ -57,7 +70,8 @@
             android:background="@layout/toggle_style"
             android:textOff=""
             android:textOn=""
-            android:checked="false" />
+            android:checked="false"
+            android:visibility="gone"/>
 
     </FrameLayout>
 
